# whackage

./: ChangeLog.md  LICENSE  README.md  TODO  stack.yaml  whackage.cabal
src/: Main.hs
src/Whackage/: Event.hs  Prelude.hs  Random.hs  Render.hs  Types.hs
